ProjectCard styling on mobile fixed

--- a/src/reusable-components/ProjectCard.css
+++ b/src/reusable-components/ProjectCard.css
@@ -5,7 +5,8 @@
 
   min-width: 275px;
   max-width: 300px;
-  height: 385px;
+  height: 30em;
+  max-height: fit-content;
   display: flex;
   flex-direction: column;
   margin: 40px 30px;
@@ -24,15 +25,15 @@
   background-size: contain;
 }
 
-.project-container a.link-parent,
 .project-container button.link-parent {
   height: 100%;
   margin: 15px;
   background-color: var(--element-bg);
   border-radius: var(--radius);
+  box-sizing: border-box;
+  position: relative;
 }
 
-.project-container:hover a.link-parent,
 .project-container:hover button.link-parent {
   box-shadow: var(--hover-shadow);
 }
@@ -63,7 +64,6 @@
   text-align: left;
   height: var(--info-height);
   box-sizing: border-box;
-  position: relative;
 }
 
 .info h3 {
